--- a/kinectreception/kinectreception.csproj
+++ b/kinectreception/kinectreception.csproj
@@ -59,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="demande.json" />
+    <None Include="Dockerfile" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
